--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
   ],
   "require": {
     "magento/framework": "^100.0|^101.0|^102.0",
-    "php": ">=7.0.0|<7.3"
+    "php": ">=7.0.0|<7.3",
+    "ext-pcre": "*"
   },
   "autoload": {
     "psr-4": {
