--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
   "description": "Some hacks to make M2 development easier",
   "keywords": [
     "composer-installer",
-    "magento"
+    "magento",
+    "dev"
   ],
   "authors": [
     {
